<?xml version="1.0"?>
<package format="2">
  <name>custom_gazebo_hwi</name>
  <version>0.0.0</version>
  <description>The custom_gazebo_hwi package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ajay@todo.todo">ajay</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <depend>gazebo_ros</depend>
  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/custom_gazebo_hwi_plugins.xml"/>
  </export>
  
</package>
