<?xml version="1.0"?>
<package format="2">
  <name>gazebo_description</name>
  <version>0.0.0</version>
  <description>The gazebo_description package</description>

  <maintainer email="fadi@todo.todo">fadi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
</package>
