<?xml version="1.0"?>
<package format="2">
  <name>moveit_planner</name>
  <version>0.0.0</version>
  <description>The moveit_planner package</description>

  <maintainer email="fadi@todo.todo">fadi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>moveit_ros_control_interface</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
