<?xml version="1.0"?>
<package format="2">
  <name>ref_benchmark</name>
  <version>0.0.0</version>
  <description>The ref_benchmark package</description>

  <maintainer email="fadi@todo.todo">fadi</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
