<?xml version="1.0"?>
<package format="2">
  <name>conveyor_picking</name>
  <version>0.0.0</version>
  <description>The conveyor_picking package</description>

  <maintainer email="fadi@todo.todo">fadi</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_pcl_manip</build_depend>
  <build_depend>pose_estimator</build_depend>
  <build_depend>moveit_planner</build_depend>
  <build_depend>franka_gripper_gazebo</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_pcl_manip</exec_depend>
  <exec_depend>pose_estimator</exec_depend>
  <exec_depend>moveit_planner</exec_depend>
  <exec_depend>franka_gripper_gazebo</exec_depend>

  <export>
  </export>
</package>
