<?xml version="1.0"?>
<package format="2">
  <name>conveyor_sim</name>
  <version>0.0.0</version>
  <description>The conveyor_sim package</description>

  <maintainer email="fadi@todo.todo">fadi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

</package>
