<?xml version="1.0"?>
<package format="2">
  <name>ros_pcl_manip</name>
  <version>0.0.0</version>
  <description>The ros_pcl_manip package</description>
  <maintainer email="fadi@todo.todo">fadi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>