<package format="2">
  <name>gripper</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gripper</p>
    <p>This package contains configuration data, 3D models and launch files
for gripper robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
